syntax = "proto3";

import "Server/proto/common/common.proto";

package push;

service Push {
    rpc Push(PushRequest) returns (common.CommReply) {}
}

message PushInfo {
    int64 pushType = 1;
    int64 notifyType = 2;
    int64 termType = 3;
    int64 notifyEffect = 4;
    int64 passthrough = 5;
    string target = 6;//for alias or topic
    string pack = 7;//package name
    string title = 8;
    string desc = 9;
    string content = 10;
    string extra = 11;//for Intent
    int64 notifyID = 12;
    int64 foreground = 13;
}

message PushRequest {
    common.Head head = 1;
    PushInfo info = 2;
}

